--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,23 +9,18 @@ dependencies:
   flutter:
     sdk: flutter
   dio: ^5.2.1+1
-  hydrated_bloc: ^9.1.2
   flutter_bloc: ^8.1.3
   logger: ^1.3.0
   bloc: ^8.1.1
   fpdart: ^0.6.0
   freezed_annotation: ^2.2.0
-  fluttertoast: ^8.2.1
   json_annotation: ^4.8.1
   injectable: ^2.1.1
   get_it: ^7.6.0
   auto_route: 7.1.0
   flutter_screenutil: 5.0.0
-  shimmer: ^2.0.0
   google_fonts: ^4.0.4
-  flutter_svg: ^2.0.5
-  path_provider: ^2.0.15
-  cupertino_icons: ^1.0.2
+  intl: ^0.18.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -38,3 +33,5 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  assets:
+    - assets/
